src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Addition_Information__c</fullName>
        <inlineHelpText>Notes from web forms</inlineHelpText>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alt_Created_Date__c</fullName>
        <label>Alt Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bad_Data_Reason__c</fullName>
        <inlineHelpText>Choose the Bad Data Reason the best fits.</inlineHelpText>
        <label>Reason for Rejection</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bad Email</fullName>
                </value>
                <value>
                    <fullName>Bad Phone</fullName>
                </value>
                <value>
                    <fullName>Bogus Data</fullName>
                </value>
                <value>
                    <fullName>No Potential</fullName>
                </value>
                <value>
                    <fullName>Disqualified Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASL_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Subscribe/Opt in for CASL (Canadian Anti-Spam Legislation).</description>
        <inlineHelpText>Must be checked in order to email (sales or marketing) to the lead.</inlineHelpText>
        <label>CASL Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloud_Apps_Product_Interest__c</fullName>
        <label>Cloud/Apps Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud Foundry</fullName>
                </value>
                <value>
                    <fullName>Pivotal TC Server</fullName>
                </value>
                <value>
                    <fullName>Pivotal Web Server</fullName>
                </value>
                <value>
                    <fullName>Pivotal RabbitMQ</fullName>
                </value>
                <value>
                    <fullName>Spring Framework</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Product_Interest__c</fullName>
        <label>Data Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pivotal HD</fullName>
                </value>
                <value>
                    <fullName>Pivotal Greenplum Database</fullName>
                </value>
                <value>
                    <fullName>Pivotal DCA</fullName>
                </value>
                <value>
                    <fullName>Pivotal Chorus</fullName>
                </value>
                <value>
                    <fullName>Pivotal Performance and Monitoring</fullName>
                </value>
                <value>
                    <fullName>Pivotal Analytics</fullName>
                </value>
                <value>
                    <fullName>Pivotal GemFire</fullName>
                </value>
                <value>
                    <fullName>Pivotal SQLFire</fullName>
                </value>
                <value>
                    <fullName>Cloud Foundry</fullName>
                </value>
                <value>
                    <fullName>Pivotal GemFire XD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Size__c</fullName>
        <description>For deal registration via Marketo, the size of the deal from the partner system</description>
        <label>Deal Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Timeframe__c</fullName>
        <inlineHelpText>When is this client expected to make a decision to move forward?</inlineHelpText>
        <label>Decision Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately</fullName>
                </value>
                <value>
                    <fullName>This month</fullName>
                </value>
                <value>
                    <fullName>Within 3 months</fullName>
                </value>
                <value>
                    <fullName>Within 6 months</fullName>
                </value>
                <value>
                    <fullName>Within 1 year</fullName>
                </value>
                <value>
                    <fullName>More than 1 year</fullName>
                </value>
                <value>
                    <fullName>Don't know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <description>For deal registration via Marketo, the expected close date of the source opp</description>
        <label>Expected Close Date</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <inlineHelpText>What is the primary function of this person</inlineHelpText>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Director/Manager</fullName>
                </value>
                <value>
                    <fullName>Analyst/Data Scientist</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>C-Level/Executive</fullName>
                </value>
                <value>
                    <fullName>Architect/Team Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISR_Activity_Type__c</fullName>
        <inlineHelpText>updated via process when activity type is specified</inlineHelpText>
        <label>ISR Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISR_Email_Sent_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ISR Email Sent Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISR_Working_Status__c</fullName>
        <formula>if(
 ISR_Activity_Type__c &lt;&gt; "",
"Working - Connected",

CASE( ISR_Email_Sent_Count__c , 
0, "",
1, "Working - Initial Contact", 
2, "Working - Initial Contact",
3, "Working - 3rd Outreach",
4, "Working - 3rd Outreach",
5, "Working - 5th Outreach",
"Not Yet Worked")

)</formula>
        <label>ISR Working Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Matched_Account_Focused__c</fullName>
        <description>Is the LeanData matched account a Focused account?</description>
        <label>Is Matched Account Focused?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Matched_Account_Named__c</fullName>
        <description>Is the LeanData matched account a named account.</description>
        <label>Is Matched Account Targeted?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Isupdated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in the Lean Data routing if we want to re-trigger the leanData routing</description>
        <inlineHelpText>Check this field if we want to re-trigger the Lean Data routing.</inlineHelpText>
        <label>Isupdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Labs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Action__c</fullName>
        <inlineHelpText>Details of the last action this Lead took</inlineHelpText>
        <label>Lead Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Community Registration</fullName>
                </value>
                <value>
                    <fullName>Completed CBT</fullName>
                </value>
                <value>
                    <fullName>Contact Us</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Download - Commercial</fullName>
                </value>
                <value>
                    <fullName>Download - Open Source</fullName>
                </value>
                <value>
                    <fullName>Event - Attended</fullName>
                </value>
                <value>
                    <fullName>Event - Registered</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Newsletter Labs</fullName>
                </value>
                <value>
                    <fullName>Newsletter - OS</fullName>
                </value>
                <value>
                    <fullName>Newsletter POV</fullName>
                </value>
                <value>
                    <fullName>Online Demo</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pivotal Network Partner Registration</fullName>
                </value>
                <value>
                    <fullName>Pivotal Network Registration</fullName>
                </value>
                <value>
                    <fullName>Premium Content</fullName>
                </value>
                <value>
                    <fullName>PWS Registration</fullName>
                </value>
                <value>
                    <fullName>ROI Tool</fullName>
                </value>
                <value>
                    <fullName>Training Registration</fullName>
                </value>
                <value>
                    <fullName>Webinar - Attended</fullName>
                </value>
                <value>
                    <fullName>Webinar - Registered</fullName>
                </value>
                <value>
                    <fullName>Pivotal Academy Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID_XtremeLab__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID XtremeLab</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Info_ExtremeLab__c</fullName>
        <label>Legacy Info ExtremeLab</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <formula>HYPERLINK("http://www.linkedin.com/pub/dir/"+ FirstName+"/"+LastName , IMAGE("/resource/trac_LinkedIn", "LinkedIn") , "_new")</formula>
        <inlineHelpText>Search LinkedIn public for this Lead</inlineHelpText>
        <label>LinkedIn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Suspended_Reason__c</fullName>
        <label>Marketing Suspended Reason</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Account_ISR__c</fullName>
        <label>Matched Account ISR</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Account_Owner__c</fullName>
        <label>Matched Account Owner</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Account_Region__c</fullName>
        <label>Matched Account Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Pivotal_Account_Category__c</fullName>
        <label>Matched Pivotal Account Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Lead_Source_Description__c</fullName>
        <label>Most Recent Lead Source Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Referrer__c</fullName>
        <description>Marketing field</description>
        <label>Most Recent Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Search_Phrase__c</fullName>
        <description>Marketing field</description>
        <label>Most Recent Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofEmployees__c</fullName>
        <label>Number of Employees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 99</fullName>
                </value>
                <value>
                    <fullName>100 - 499</fullName>
                </value>
                <value>
                    <fullName>500 - 999</fullName>
                </value>
                <value>
                    <fullName>1,000 - 4,999</fullName>
                </value>
                <value>
                    <fullName>5,000 - 9,999</fullName>
                </value>
                <value>
                    <fullName>&gt;10,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OSS_Project_Interest_Apache_Tomcat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS Project Interest:Apache Tomcat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSS_Project_Interest_Cloud_Foundry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS Project Interest:Cloud Foundry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSS_Project_Interest_Grails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS Project Interest:Grails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSS_Project_Interest_Groovy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS Project Interest:Groovy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSS_Project_Interest_MadLib__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS Project Interest:MadLib</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSS_Project_Interest_Open_Chorus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS Project Interest:Open Chorus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSS_Project_Interest_RabbitMQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS Project Interest:RabbitMQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSS_Project_Interest_Redis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS Project Interest:Redis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSS_Project_Interest_Spring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS Project Interest:Spring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>For Marketo Form, deal registrant's opportunity name</description>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_In_News__c</fullName>
        <defaultValue>true</defaultValue>
        <description>TRUE / FALSE ONLY (TRUE for List Buys by Default)</description>
        <label>Opt In: News</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_In_Partner__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opt In: Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Lead_Source_Description__c</fullName>
        <description>Lead Source: Campaign Name</description>
        <label>Original Lead Source Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Lead_Source__c</fullName>
        <label>Original Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Referral - Non-Federation</fullName>
                </value>
                <value>
                    <fullName>Sales - EMC Referral</fullName>
                </value>
                <value>
                    <fullName>Sales - Pivotal Generated</fullName>
                </value>
                <value>
                    <fullName>Sales - VMware Referral</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Teleservices</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PWS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pivotal Web Services Member</description>
        <label>PWS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaaS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PaaS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Rep_Email__c</fullName>
        <description>For deal registration via Marketo, the email of the registration account rep</description>
        <label>Partner Account Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Rep_Name__c</fullName>
        <description>For Partner Deal registration (inbound from Marketo form), the Sales Rep name at the registering partner.</description>
        <label>Partner Account Rep Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Rep_Phone__c</fullName>
        <description>For deal registration via Marketo, the phone of the registration account rep</description>
        <label>Partner Account Rep Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Partner_Business_Functions__c</fullName>
        <label>Partner Business Functions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Product Development</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Strategic Management</fullName>
                </value>
                <value>
                    <fullName>Technology Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Cloud_Offering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Cloud Offering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Industry_Verticals__c</fullName>
        <label>Partner Industry Verticals</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Oil &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>Telecom</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Product_Category__c</fullName>
        <label>Partner Product Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Data Integration</fullName>
                </value>
                <value>
                    <fullName>Data Provider</fullName>
                </value>
                <value>
                    <fullName>Industry-specific Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Sales_Manager_Email__c</fullName>
        <description>For deal registration via Marketo, the email of the registering sales manager</description>
        <label>Partner Sales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Sales_Manager_Name__c</fullName>
        <description>For deal registration via Marketo, the name of the registering sales manager</description>
        <label>Partner Sales Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Sales_Manager_Phone__c</fullName>
        <description>For deal registration via Marketo, the phone of the registering sales manager</description>
        <label>Partner Sales Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Partner_ULA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner ULA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Product_Interest__c</fullName>
        <label>Primary Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apps</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>OSS</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Pivotal One</fullName>
                </value>
                <value>
                    <fullName>Pivotal CF</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Apps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Cloud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_OSS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Pivotal_One__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product: Pivotal One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Selection__c</fullName>
        <label>Product Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud Foundry</fullName>
                </value>
                <value>
                    <fullName>EMC DCA</fullName>
                </value>
                <value>
                    <fullName>MADlib</fullName>
                </value>
                <value>
                    <fullName>Pivotal App Suite</fullName>
                </value>
                <value>
                    <fullName>Pivotal Big Data Suite</fullName>
                </value>
                <value>
                    <fullName>Pivotal CF</fullName>
                </value>
                <value>
                    <fullName>Pivotal Chorus</fullName>
                </value>
                <value>
                    <fullName>Pivotal Data Dispatch</fullName>
                </value>
                <value>
                    <fullName>Pivotal Data Labs</fullName>
                </value>
                <value>
                    <fullName>Pivotal Data Tools</fullName>
                </value>
                <value>
                    <fullName>Pivotal GemFire</fullName>
                </value>
                <value>
                    <fullName>Pivotal GPText</fullName>
                </value>
                <value>
                    <fullName>Pivotal Greenplum DB</fullName>
                </value>
                <value>
                    <fullName>Pivotal HD</fullName>
                </value>
                <value>
                    <fullName>Pivotal Labs</fullName>
                </value>
                <value>
                    <fullName>Pivotal One</fullName>
                </value>
                <value>
                    <fullName>Pivotal RabbitMQ</fullName>
                </value>
                <value>
                    <fullName>Pivotal SQLFire</fullName>
                </value>
                <value>
                    <fullName>Pivotal tc Server</fullName>
                </value>
                <value>
                    <fullName>Pivotal Web Server</fullName>
                </value>
                <value>
                    <fullName>Redis</fullName>
                </value>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>vFabric Suite</fullName>
                </value>
                <value>
                    <fullName>Hadoop</fullName>
                </value>
                <value>
                    <fullName>Containers</fullName>
                </value>
                <value>
                    <fullName>Big Data</fullName>
                </value>
                <value>
                    <fullName>Pharma</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product: Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Each partner type Lead will be identified with a specific Program. This information will be collected on the Marketo Form on Lead submit.</description>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publicly_Held__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publicly Held</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Contact__c</fullName>
        <inlineHelpText>Why did this person contact us?</inlineHelpText>
        <label>Reason for Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Press/Analyst</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Job Opportunities</fullName>
                </value>
                <value>
                    <fullName>Customer Activities</fullName>
                </value>
                <value>
                    <fullName>Analytics Workbench</fullName>
                </value>
                <value>
                    <fullName>OSS Support</fullName>
                </value>
                <value>
                    <fullName>Pivotal Tracker</fullName>
                </value>
                <value>
                    <fullName>Pivotal Labs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Campaign_ID__c</fullName>
        <description>Marketing field</description>
        <label>SFDC Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Secondary_Campaign_ID__c</fullName>
        <description>Marketing field</description>
        <label>SFDC Secondary Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Download_Name__c</fullName>
        <label>SW Download Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Requested_Marketing_SuspendLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>3/26 added as ISR request to suspend marketing outreach emails to leads</description>
        <inlineHelpText>Choose this when you would like to stop all marketing outreach to this lead</inlineHelpText>
        <label>Sales Requested Marketing Suspend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_Product_Interest__c</fullName>
        <label>Services Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pivotal Labs</fullName>
                </value>
                <value>
                    <fullName>Pivotal Data Science Labs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_of_Opportunity__c</fullName>
        <description>For deal registration via Marketo, the stage of the opp in the source system</description>
        <label>Stage of Opportunity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>